Add some more comments and helper functions.

--- a/cloud_computing_concepts/mp1/mp1/Makefile
+++ b/cloud_computing_concepts/mp1/mp1/Makefile
@@ -8,6 +8,7 @@
 #***********************
 
 CFLAGS =  -Wall -g -std=c++11
+CFLAGS += -Wno-unused-variable -Wno-format-security -Wno-sign-compare
 
 all: Application
 
