--- a/cloud_computing_concepts/mp1/mp1/Makefile
+++ b/cloud_computing_concepts/mp1/mp1/Makefile
@@ -35,6 +35,9 @@ all: main all_tests
 main: $(OBJ_FILES) $(MAIN_OBJ)
 	$(CXX) -o $@ $^ $(LD_FLAGS)
 
+run_singlefailure: main
+	./main ./testcases/singlefailure.conf
+
 all_tests: $(OBJ_FILES)
 	$(MAKE) -C $(TEST_DIR) all_tests HEADER_DIR=$(abspath $(HEADER_DIR)) SRC_OBJ_DIR=$(abspath $(OBJ_DIR))
 
